# geomcover

./: .gitignore  README.md  ajax.py  bokeh_nerve.py  covers.py  meson.build  mri.py  nerve2.py  pyproject.toml  set_cover.py  test_set_cover.py
docs/: cluster.mean_shift.html  cover.coverage.html  cover.html  cover.set_cover.html  cover.set_cover_greedy.html  cover.set_cover_ilp.html  cover.set_cover_rr.html  cover.set_cover_sat.html  cover.to_canonical.html  cover.valid_cover.html  cover.wset_cover_ILP.html  cover.wset_cover_RR.html  cover.wset_cover_greedy.html  coverage.html  geomcover.cover.ask_package_install.html  geomcover.cover.coverage.html  geomcover.cover.package_exists.html  geomcover.cover.sets_to_csc.html  geomcover.cover.valid_cover.html  geomcover.cover.wset_cover.html  geomcover.cover.wset_cover_ILP.html  geomcover.cover.wset_cover_RR.html  geomcover.cover.wset_cover_greedy.html  geomcover.cover.wset_cover_sat.html  geometry.bundle_weights.html  geometry.tangent_bundle.html  index.html  index.md  io.load_set_cover.html  io.reindex_sparse.html  io.sets_to_sparse.html  io.sparse_to_sets.html  io.to_canonical.html  linalg.cmds.html  linalg.pca.html  reference.html  search.json  styles.css  to_canonical.html  valid_cover.html  (+3 more)
docs_src/: _api_index.qmd  _quarto.yml  _sidebar.yml  cluster.mean_shift.qmd  cover.coverage.qmd  cover.qmd  cover.set_cover.qmd  cover.set_cover_greedy.qmd  cover.set_cover_ilp.qmd  cover.set_cover_rr.qmd  cover.set_cover_sat.qmd  cover.to_canonical.qmd  cover.valid_cover.qmd  cover.wset_cover_ILP.qmd  cover.wset_cover_RR.qmd  cover.wset_cover_greedy.qmd  coverage.qmd  geomcover.cover.ask_package_install.qmd  geomcover.cover.coverage.qmd  geomcover.cover.package_exists.qmd  geomcover.cover.sets_to_csc.qmd  geomcover.cover.valid_cover.qmd  geomcover.cover.wset_cover.qmd  geomcover.cover.wset_cover_ILP.qmd  geomcover.cover.wset_cover_RR.qmd  geomcover.cover.wset_cover_greedy.qmd  geomcover.cover.wset_cover_sat.qmd  geometry.bundle_weights.qmd  geometry.tangent_bundle.qmd  index.qmd  io.load_set_cover.qmd  io.reindex_sparse.qmd  io.sets_to_sparse.qmd  io.sparse_to_sets.qmd  io.to_canonical.qmd  linalg.cmds.qmd  linalg.pca.qmd  objects.json  postprocess.py  reference.qmd  (+5 more)
docs_src/_inv/: python_objects.json
excess/: _cover.cpp  foo.html  nerve.py  nerve_interactive.py  setup.py
notebooks/: benchmark.py  camera_stadium.txt  circle.py  cosine.py  offset_circle.py  spiral.py  test_mean_shift.py  test_set_cover.py
sc_ext/: meson.build  set_cover.cpp
src/geom_cover/: covers.py  meson.build  wset_cover.py
src/geomcover/: __init__.py  __version__.py  cluster.py  cover.py  csgraph.py  geometry.py  io.py  linalg.py  loaders.py  plotting.py  wset_cover.py
src/set_cover/: __init__.py  _cover.cpp  covers.py  csgraph.py  loaders.py  meson.build  wset_cover.py
src/set_cover.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/set_cover/sc_ext/: __init__.py  set_cover.cpp
tests/: __init__.py  test_pkg.py
