[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "wheel", "numpy", "pybind11>=2.8.0"]

[project]
name = "geomcover"
version = "0.1.0"
authors = [
	{  name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }
]
description = "Geometrically-oriented cover estimation using reductions to weighted set cover."
readme = "README.md"
packages = [
	{ include = "geom_cover", from = "src" },
]
dependencies = [
  "numpy", 
	"combin"
]
license = {file = "LICENSE"}

[project.optional-dependencies]
extras = [
	"pysat",
	"ortools", 
	"geomstats"
]
