[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
# build-backend = "mesonpy"
# requires = ["meson-python", "wheel", "numpy", "pybind11>=2.8.0"]

[project]
name = "geomcover"
version = "0.1.0"
authors = [
	{  name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }
]
description = "Geometrically-oriented cover estimation using reductions to weighted set cover."
readme = "README.md"
dependencies = [
  "numpy", 
	"combin"
]
license = {file = "LICENSE"}

[project.optional-dependencies]
extras = [
	"pysat",
	"ortools", 
	"geomstats"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["D", "E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint.pydocstyle]
convention = "google"