[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
# build-backend = "mesonpy"
# requires = ["meson-python", "wheel", "numpy", "pybind11>=2.8.0"]

[project]
name = "geomcover"
version = "0.1.3"
authors = [{ name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }]
description = "Geometrically-oriented cover estimation using reductions to weighted set cover."
readme = "README.md"
dependencies = ["numpy", "scipy", "combin"]
license = { file = "LICENSE" }

[project.optional-dependencies]
extras = ["pysat", "ortools", "geomstats"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.dat"]

[tool.pyright]
venvPath = "~/opt/miniconda3/envs"
venv = "default"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]